--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"build": "babel js -d lib"
+	"build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
